# myostream

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  MyOStreamConfig.cmake.in  README.md  runtest.sh
.github/workflows/: cmake.yml
include/: myostream.h  myostream_watch.h
test/: CMakeLists.txt  main.cpp  main.h  unittest.cpp
